--- a/vs_code/vs_code_settings.json
+++ b/vs_code/vs_code_settings.json
@@ -39,6 +39,7 @@
   "docker.showStartPage": false,
   "editor.detectIndentation": false,
   "editor.emptySelectionClipboard": false,
+  "editor.inlineSuggest.enabled": true,
   "editor.links": false,
   "editor.minimap.enabled": false,
   "editor.renderControlCharacters": true,
@@ -63,6 +64,15 @@
     "**/node_modules/*": true
   },
   "gitHistory.showEditorTitleMenuBarIcons": false,
+  "github.copilot.enable": {
+    "*": false,
+    "jsonc": false,
+    "markdown": false,
+    "plaintext": false,
+    "python": true,
+    "rust": true,
+    "yaml": false
+  },
   "gitlens.advanced.messages": {
     "suppressLineUncommittedWarning": true
   },
@@ -96,10 +106,12 @@
   "python.venvPath": "~/tools/python-virt-envs/",
   "redhat.telemetry.enabled": false,
   "search.followSymlinks": false,
+  "security.workspace.trust.enabled": false,
   "security.workspace.trust.untrustedFiles": "open",
   "shellcheck.disableVersionCheck": true,
   "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false,
+  "telemetry.telemetryLevel": "off",
   "terminal.integrated.env.windows": {
     "CMDER_ROOT": "C:\\tools\\Cmder"
   },
